# codex-autorunner

./: .deadcode-baseline.json  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_FIX_SUMMARY.md  WEBSOCKET_SECURITY_FIXES.md  codex-autorunner.yml  eslint.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  stress-loop-result.md  tsconfig.json
.codex-autorunner/: .gitignore  ABOUT_CAR.md  OPINIONS.md  PROGRESS.md  SPEC.md  TODO.md
.githooks/: pre-commit  pre-push
docs/: AGENT_SETUP_DISCORD_GUIDE.md  AGENT_SETUP_GUIDE.md  AGENT_SETUP_TELEGRAM_GUIDE.md  ARCHITECTURE_BOUNDARIES.md  ARCHITECTURE_REFACTOR_HANDOFF.md  RUN_HISTORY.md  STATE_ROOTS.md  adding-an-agent.md  apps.md  car-ticket-skill.md  plugin-api.md  pma-file-transfer-e2e-runbook.md  process-registry.md  protocol-schema-management.md  runtime-services-ownership.md  terminal-debugging.md
mcp2-agent-config/: .gitignore  README.md  connectors.map.json  credentials.template.json  sdlc-orchestrator.cjs  validate-credentials.cjs
schemas/: hub.json
scripts/: acp_conformance.py  add-static-banner.js  car-artifact-sizes.sh  chat_surface_incident_replay.py  chat_surface_latency_budgets.py  chat_surface_seeded_exploration.py  check.sh  check_cli_command_hints.py  check_command_resolution.py  check_core_imports.py  check_destination_contract_drift.py  check_dom_structure.mjs  check_import_boundaries.py  check_injected_context.py  check_theme_tokens.py  (+48 more)
(+8135 files in other folders)
